--- a/cnn_results.tex
+++ b/cnn_results.tex
@@ -72,7 +72,7 @@
 \label{fig:CNN_dist}
 \end{figure}
 
-The next step that was taken was to use CNN10000 to classify track candidate images that were identified by the Selection I original cc-inclusive filter described in \cite{cc-inclusive}. Passing rates for each cut in cc-inclusive filter are show in figure \ref{fig:cuttable}. For the incorrect image making normalization dataset, out of 188,880 events, 7438 passed the cut right before 75 cm track length cut which is 3.9\% of total data. Discrepancies in passing rates are due to grid submission issues, however, this dataset is used to check if changes in image making normalization affects $\mu/\pi$ separation probability due to CNN10000 being trained with incorrectly image making normalized data. For the second dataset with correct image making normalization, out of 188,880 events, 9552 events passed the cut right before the 75 cm track length cut which is 5.1\% passing rate and is comparable to figure \ref{fig:cuttable}. In time cosmics were also run over for efficiency and purity calculations. Out of 14395 in time cosmic events, 175 passed the cut right before the 75 cm track length cut which is a passing rate of 1.2\% compared to 1.3\% shown in table \ref{table:mc} in section \ref{section:eventselection} . 
+The next step that was taken was to use CNN10000 to classify track candidate images that were identified by the Selection I original cc-inclusive filter described in \cite{cc-inclusive}. Passing rates for each cut in cc-inclusive filter are show in figure \ref{fig:cuttable}. For the incorrect image making normalization dataset, out of 188,880 events, 7438 passed the cut right before 75 cm track length cut which is 3.9\% of total data. Discrepancies in passing rates are due to grid submission issues, however, this dataset is used to check if changes in image making normalization affects $\mu/\pi$ separation probability due to CNN10000 being trained with incorrectly image making normalized data. For the second dataset with correct image making normalization, out of 188,880 events, 9552 events passed the cut right before the 75 cm track length cut which is 5.1\% passing rate and is comparable to figure \ref{fig:cuttable}. Intime cosmics were also run over for efficiency and purity calculations. Out of 14395 in time cosmic events, 175 passed the cut right before the 75 cm track length cut which is a passing rate of 1.2\% compared to 1.3\% shown in table \ref{table:mc} in section \ref{section:eventselection} . 
 
 Figures \ref{fig:confusion_wrongnorm}, \ref{fig:prob_wrongnorm}, \ref{fig:confusion_rightnorm} and \ref{fig:prob_rightnorm} show the accuracy and $\mu/\pi$ separation of both the correct and incorrect normalized images. The confusion matrices are only composed of $\mu/\pi$ data. Other particles passed the cc-inclusive filter before the 75 cm track length cut and were all mis-id'ed as muons. Since CNN10000 has not seen any particles other than muons and pions, it makes sense that those get mis-id'ed. Figures \ref{fig:prob_wrongnorm} and \ref{fig:prob_rightnorm} don't have $\mu/\pi$separation comparable to \ref{fig:prob_plot}, but \ref{fig:prob_wrongnorm} does skew to higher probabilities compared to \ref{fig:prob_rightnorm}. This is to be expected and further work on quantifying the performance of CNN10000 should use the incorrect image making normalization. It is also expected that the separation isn't as defined as the testing dataset for CNN10000. CNN10000 was trained and tested using single particle muons and pions and the track candidate dataset come from BNB+Cosmic events, not to mentions all track candidates have passed the cc-inclusive filter that tags "muon-like" tracks therefore the pions in this sample look much closer in muon topology than the network has seen. Also, these images were made from wire and time ticks associated to hits from the track candidate that passed the cc-inclusive filter. This is different from the training images where a bounding box was drawn over the total $\mu$ or $\pi$ interaction. Spurious energy deposition from a $\pi-Ar$ interaction is most likely not included in the BNB+Cosmic images due to the tracking algorithm. To remedy this, the CNN needs to see more "muon-like" pions and muons and pions from a neutrino interaction passing the cc-inclusive filter as well as a larger particle variety including protons, photons and electrons. Although $\mu/\pi$ separation is lacking, CNN10000 does an excellent job of classifying muons and using higher CNN probability can increase purity. Figures \ref{fig:track_wrongnorm}, \ref{fig:track_rightnorm}, \ref{fig:momentum_wrongnorm} and \ref{fig:momentum_rightnorm} show the track and momentum distributions for these two datasets. In both sets you have an increase in data in the bin below 75 cm and at bins below 0.5 GeV. These distributions were made with events classified with 70\% probability of being a muon regardless of true particle type. 
 \end{comment}
@@ -80,10 +80,10 @@ Figures \ref{fig:confusion_wrongnorm}, \ref{fig:prob_wrongnorm}, \ref{fig:confus
 
 \subsection{Classification of MC data using Selection I CC-Inclusive Filter}
 
-After training CNN10000, it was then used to classify track candidate images that were identified by the Selection I cc-inclusive filter described in chapter \ref{ch:meas}. Passing rates for each cut in this filter are shown in table \ref{table:mc}. Out of 188,880 events, 19,112 passed the cut right before the 75 cm track length cut which is a 10.1\% passing rate and comparable to the 10\% passing rate shown in table \ref{table:mc}. In time cosmics were also run over, out of 14,606 in time cosmics events, 302 passed the cut right before the 75 cm track length cut which is a 2.1\% passing rate comparable to the 2.7\% passing rate in the cc-inclusive tech-note. Figures \ref{fig:confusion_sel1mod} and \ref{fig:prob_sel1mod} show the accuracy and $\mu/\pi$ separation. Both plots are only composed of muons and pions due to the focus on $\mu/\pi$ separation and the fact that CNN10000 was only trained on muons and pions, however, for reference, all other particles that did pass Selection I were mis-id'ed as muons. Muons are being identified at a very high rate, while pions are all being mis-id'ed as muons. This is due in part because the pion track candidate that does pass the cc-inclusive filter right before the 75 cm track length cut has already been identified as a muon candidate, hence, at a higher muon probability. Another reason for the pion mis'id can be attributed to the training/classifying dataset difference. For training, the pion images include the whole pion interaction in argon, including any decays or nucleon scattering. The image created from a BNB+Cosmic event used for classification only includes the track candidate that passed the cc-inclusive filter.
+After training CNN10000, it was then used to classify track candidate images that were identified by the Selection I cc-inclusive filter right before the 75 cm track length cut described in chapter \ref{ch:meas}. Passing rates for each cut in this filter are shown in table \ref{table:mc}. Out of 188,880 events, 19,112 passed the cut right before the 75 cm track length cut which is a 10.1\% passing rate and comparable to the 10\% passing rate shown in table \ref{table:mc}. Intime cosmics were also run over, out of 14,606 in time cosmics events, 302 passed the cut right before the 75 cm track length cut which is a 2.1\% passing rate comparable to the 2.7\% passing rate in the cc-inclusive tech-note. Figures \ref{fig:confusion_sel1mod} and \ref{fig:prob_sel1mod} show the accuracy and $\mu/\pi$ separation. Both plots are only composed of muons and pions due to the focus on $\mu/\pi$ separation and the fact that CNN10000 was only trained on muons and pions, however, for reference, all other particles that did pass Selection I were mis-id'ed as muons. Muons are being identified at a very high rate, while pions are all being mis-id'ed as muons. This is due in part because the pion track candidate that does pass the cc-inclusive filter right before the 75 cm track length cut has already been identified as a muon candidate, hence, at a higher muon probability. Another reason for the pion mis'id can be attributed to the training/classifying dataset difference. For training, the pion images include the whole pion interaction in argon, including any decays or nucleon scattering. The image created from a BNB+Cosmic event used for classification only includes the track candidate that passed the cc-inclusive filter right before the 75 cm track length cut.
 Figure \ref{fig:sel1mod_track} shows the track range distributions of all events from Selection I being classified by the CNN as a muon with a probability of 70\% regardless of true particle type. We get entries for the CNN curve in the lowest bin and none for the 75 cm curve. To see how many true CC events were identified by CNN10000 breaking down figure \ref{fig:sel1mod_track} by event type was necessary. Figures \ref{fig:sel1mod_stackedcnn} and \ref{fig:sel1mod_stackedoriginal} show track range distributions separated by signal and various backgrounds. Particle type was not taken into consideration in these plots so true CC event images can be any track candidate particle passing Selection I cut right before track length cut including pions and protons. 
 
-To gain an even deeper understanding on how CNN10000 is performing, plotting these distributions with only muons and pions was done due to the fact that CNN10000 was trained with only those particles for $\mu/\pi$ separation. Figures \ref{fig:sel1mod_mupi_70stackedcnn}-\ref{fig:sel1mod_mupi_90stackedcnn} show the stacked histograms of signal and background of the track range distributions with varying CNN probabilities starting from 70\% and ending at 90\% probability. With higher probabilities we get a purer sample in the lower bin but we end up losing events as well. Momentum distributions for all signal/background events are shown in figure \ref{fig:sel1mod_parP}.    
+To gain an even deeper understanding on how CNN10000 is performing, plotting these distributions with only muons and pions was done due to the fact that CNN10000 was trained with only those particles for $\mu/\pi$ separation. Figures \ref{fig:sel1mod_mupi_70stackedcnn}-\ref{fig:sel1mod_mupi_90stackedcnn} show the stacked histograms of signal and background of the track range distributions with varying CNN probabilities starting from 70\% and ending at 90\% probability. With higher probabilities we get a purer sample in the lower bin but we end up losing events as well. Momentum distributions for all signal/background events are shown in figure \ref{fig:sel1mod_parP}. At CNN10000 at 70\% we introduce more NC background, however, we also get more CC events passing as well.   
 
 \begin{figure}[htp!]
 \centering
@@ -210,6 +210,7 @@ Another check was to see if any true CC pions were passing through the cut right
 	\begin{subfigure}[b]{.45\textwidth}
 	\includegraphics[width=\textwidth,height=2.5in]{figs/sel1mod_mupi_trackrange_acc70.png}
 	\caption{Stacked signal $\mu \& \pi$/background $\mu \& \pi$ track range distribution of CNN @ 70\%}
+	\label{fig:mupib}
 	\end{subfigure}
 	\quad
 \caption{Track distribution comparisons of true CC muons plotted vs true CC muons and pions plotted}
@@ -304,7 +305,7 @@ Based on these numbers, the following performance values of the selection with 7
 \end{itemize}
 \end{itemize}
 
-Lastly, figure \ref{fig:sel1mod_cnnperformance} shows a more representative performance of the CNN. Due to the fact that the CNN was trained on muons and pions, showing the performance of CC muon events versus NC pion events with respect to CNN probability gives a better picture of how the network is performing. Figure \ref{fig:sel1mod_cnnperformance} shows that at 83\% we are below the 75 cm cut NC pion threshold and still above the CC muon threshold. Using 83\% probability not only reduced the NC pion background, it also dramatically reduced the in time cosmics and cosmics in the BNB. 
+Lastly, figure \ref{fig:sel1mod_cnnperformance} shows a more representative performance of the CNN. Due to the fact that the CNN was trained on muons and pions, showing the performance of CC muon events versus NC pion events with respect to CNN probability gives a better picture of how the network is performing. Figure \ref{fig:sel1mod_cnnperformance} shows that at 83\% we are below the 75 cm cut NC pion threshold and still above the CC muon threshold. Using 83\% probability not only reduced the NC pion background, it also dramatically reduced the intime cosmics and cosmics in the BNB. Figure \ref{fig:sel1mod_83} shows the track range of signal muons and pions compared to background muons and pions from cosmic rays or NC interactions. Comparing figure \ref{fig:sel1mod_83} to \ref{fig:mupib} you can see the reduction in both the cosmic and NC backgrounds.  
 
 \begin{figure}[htp!]
 \centering
@@ -313,9 +314,15 @@ Lastly, figure \ref{fig:sel1mod_cnnperformance} shows a more representative perf
 \label{fig:sel1mod_cnnperformance}
 \end{figure}
 
+\begin{figure}[htp!]
+\centering
+\includegraphics[width=3in,height=2.5in]{figs/sel1mod_trackrange_acc83.png}
+	\caption{Stacked signal $\mu \& \pi$/background $\mu \& \pi$ track range distribution of CNN @ 83\%}
+\label{fig:sel1mod_83}
+\end{figure}
 \subsection{Conclusions of CNN10000 classification of MC data}
 
-It was shown that even though CNN10000 was trained with single particle generated muons and pions, it performs fairly well at classifying track candidate images from BNB+Cosmic events. Events have been regained below the 75 cm track length cut and the momentum and track range distributions have similar shapes to the distributions of Selection I. Efficiencies and purities were calculated for Selection I events before 75 cm track length cut  with the CNN at 83\% probability and are 14\% and 62\% respectively. Although the CNN doesn't have separation between muons and pions and although all particles passing CNN are classified as muon, increasing CNN probability allows us to increase the purity as well as maintain an efficiency comparable to the 75 cm track length cut all while recovering events below that 75 cm cut. Out of the 6142 events that passed the CNN @ 83\% 1470 events were below the 75 cm cut, a recovery of 3.3\% of data with an purity of 15\%. Although these numbers are low, it is an improvement from the selecion I in both total efficiency and purity and an increase in phase space by recovering these events. 
+It was shown that even though CNN10000 was trained with single particle generated muons and pions, it performs fairly well at classifying track candidate images from BNB+Cosmic events. Events have been regained below the 75 cm track length cut and the momentum and track range distributions have similar shapes to the distributions of Selection I. Efficiencies and purities were calculated for Selection I events before 75 cm track length cut  with the CNN at 83\% probability and are 14\% and 62\% respectively. Although the CNN doesn't have separation between muons and pions and although all particles passing CNN are classified as muon, increasing CNN probability allows us to increase the purity as well as maintain an efficiency comparable to the 75 cm track length cut all while recovering events below that 75 cm cut. Out of the 6142 events that passed the CNN @ 83\% 1470 events were below the 75 cm cut, a recovery of 3.3\% of data excluded by the 75 cm cut with a purity of 15\% which is better than Selection I. Although these numbers are low, it is an improvement from the selecion I in both total efficiency and purity and an increase in phase space by recovering these events. 
 
 \section{Classification using CNN100000}
 For classification of BNB+Cosmics and data using CNN100000, images were made from track candidates that passed the Selection I filter, however, unlike for classifying BNB+Cosmics using CNN10000, the classification of CNN100000 went further up Selection I's cut chain. For CNN100000, steps 5 through 8 seen in section \ref{section:eventselection} were removed. The image making algorithm would then create multiple images per event of pixels corresponding to each track associated to the flattest vertex candidate in the fiducial volume. One of the findings of CNN10000 was the possibility of recovering interesting events in which a pion from a cc-inclusive event is tagged as the track candidate of interest. This was the reason for trying to expand on what a convolutional neural network could accomplish. By allowing the CNN to particle ID all track associated with the vertex candidate, we allow the selection to contain the interesting events that were cut out in Selection I due to the cc pion track being chosen as the track candidate. Figure \ref{fig:cnn100000_image} shows the image making algorithm for BNB+Cosmic images. The classification algorithm would then particle ID each image in an event. If at least one of the images is identified as a muon by the CNN, the event is then classified as a $\nu_{\mu}$ event. The image with the highest muon probability is then chosen to be the track candidate and used for kinematic distribution purposes. The CNN's selection and efficiency can be tuned by increasing the muon probability of the muon track candidate image. The results of using CNN100000 to classify BNB+Cosmics will be discussed in the next sections. 
@@ -523,7 +530,7 @@ After checking to make sure CNN100000 truth kinematic distributions looked simil
 \label{fig:dataZ}
 \end{figure}
 
-To compare MC to data, figures \ref{fig:pottrack} through \ref{fig:potphi} show BNB+Cosmic MC events and off-beam data subtracted from on-beam data that passed CNN100000. On-beam minus off-beam subtracts off the events triggered from cosmics with no beam related interactions which makes it comparable to BNB+Cosmic. The red boxes in the figures correspond to selected $\nu_{\mu}$ CC signal and background. The backgrounds also depicted in various colors as well. From shape, it is visible that there is a decrease in NC background events (green curve) from Selection I to CNN100000, however, there also seems to be a excess in cosmic background events. The cosmic background curve (blue) are cosmic background events in the BNB+Cosmic MC sample that passed a corresponding selection filter. In time cosmics generated with CORSIKA aren't plotted and are just used for purity calculations. The percentage of NC background events for Selection I was 3.5\%, and for CNN100000 it was 1\%, a decrease of 2.5\%. The CNN is doing a good job at removing NC background while still recovering low track range $\nu_{\mu}$ CC events which was the main goal of this analysis. The percentage of cosmic background from BNB+Cosmic MC dataset for Selection I was 6.6\%, while for CNN100000, it was 23\%, an increase of 16.5\%. This is a large increase from Selection I and CNN100000. One of the reasons this may be is due to the fact that the CNN was trained on single generated isotropic particles, therefore muons from cosmics would in fact pass the CNN even with a high muon probability. Figure \ref{fig:potphi} shows an excess of events in the cosmic enriched sample $\pm\pi/2$, more so than in Selection I. A way to try and combat this would be to add an additional particle class which would consist of muons from cosmics during training to see if the CNN could learn to differentiate beam induced muons from cosmic induces muons. Another way to combat this is to have a more sophisticated flash matching algorithm that could reduce the locality of where the neutrino interaction occurred. You can also see the excess of cosmics in figure \ref{fig:potcostheta}, another way you try and reduce this background is by employing more traditional cuts after the CNN for example cutting on $cos(\theta)$ or $\phi$, but cuts like these affect phase space. 
+To compare MC to data, figures \ref{fig:pottrack} through \ref{fig:potphi} show BNB+Cosmic MC events and off-beam data subtracted from on-beam data that passed CNN100000. On-beam minus off-beam subtracts off the events triggered from cosmics with no beam related interactions which makes it comparable to BNB+Cosmic. The red boxes in the figures correspond to selected $\nu_{\mu}$ CC signal and background. The backgrounds also depicted in various colors as well. From shape, it is visible that there is a decrease in NC background events (green curve) from Selection I to CNN100000, however, there also seems to be a excess in cosmic background events. The cosmic background curve (blue) are cosmic background events in the BNB+Cosmic MC sample that passed a corresponding selection filter. Intime cosmics generated with CORSIKA aren't plotted and are just used for purity calculations. The percentage of NC background events for Selection I was 3.5\%, and for CNN100000 it was 1\%, a decrease of 2.5\%. The CNN is doing a good job at removing NC background while still recovering low track range $\nu_{\mu}$ CC events which was the main goal of this analysis. The percentage of cosmic background from BNB+Cosmic MC dataset for Selection I was 6.6\%, while for CNN100000, it was 23\%, an increase of 16.5\%. This is a large increase from Selection I and CNN100000. One of the reasons this may be is due to the fact that the CNN was trained on single generated isotropic particles, therefore muons from cosmics would in fact pass the CNN even with a high muon probability. Figure \ref{fig:potphi} shows an excess of events in the cosmic enriched sample $\pm\pi/2$, more so than in Selection I. A way to try and combat this would be to add an additional particle class which would consist of muons from cosmics during training to see if the CNN could learn to differentiate beam induced muons from cosmic induces muons. Another way to combat this is to have a more sophisticated flash matching algorithm that could reduce the locality of where the neutrino interaction occurred. You can also see the excess of cosmics in figure \ref{fig:potcostheta}, another way you try and reduce this background is by employing more traditional cuts after the CNN for example cutting on $cos(\theta)$ or $\phi$, but cuts like these affect phase space. 
 
 
 \begin{figure}[htp!]
