--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -2,12 +2,6 @@
 %\titlepage[of Syracuse University]{%
 %  A dissertation submitted to  Syracuse University\\ for the degree of Doctor of Philosophy}
 
-%% Abstract
-\begin{abstract}%[\smaller \thetitle\\ \vspace*{1cm} \smaller {\theauthor}]
-  %\thispagestyle{empty}
-The purpose of this thesis was to use Convolutional Neural Networks (CNN) to separate $\mu'{s}$ and $\pi'{s}$ for use in increasing the acceptance rate of $\mu'{s}$ below the implemented 75cm track length cut in the Charged Current Inclusive (CC-Inclusive) event selection for the CC-Inclusive Cross-Section Measurement. In doing this, we increase acceptance rate for CC-Inclusive events below a specific momentum range.
-\end{abstract}
-\let\cleardoublepage\clearpage
 %% Declaration
 \begin{declaration}
   I dedicate this dissertation to the two most important women in my life; my mom and my wife. Mom, you taught me how to stand up for myself, how to trust in my abilities, and that hard work always pays off. Em, you've been and continue to be my rock, steadying me as I questioned whether or not I could do this, loving me through all the late nights and keeping me sane. Both have been there cheering me on giving me strength and love as I worked towards the hardest thing I've ever accomplished.  
@@ -56,7 +50,8 @@ The purpose of this thesis was to use Convolutional Neural Networks (CNN) to sep
 %\tableofcontents
 %\listoffigures
 %\listoftables
-{\tableofcontents \let\cleardoublepage\clearpage \listoffigures \let\cleardoublepage\clearpage \listoftables}
+%{\tableofcontents \let\cleardoublepage\clearpage \listoffigures \let\cleardoublepage\clearpage \listoftables}
+{\tableofcontents \listoffigures \listoftables}
 
 %% Strictly optional!
 \frontquote{%
