--- a/appendices.tex
+++ b/appendices.tex
@@ -1,6 +1,5 @@
 %% The "\appendix" call has already been made in the declaration
 %% of the "appendices" environment (see thesis.tex).
-\chapter{Curriculum Vitae}
+%\chapter{Curriculum Vitae}
 
-\includepdf[pages=-]{../post\_doc\_applications/cv\_7/esquivel\_cv\_wpublications.pdf}
 
