--- a/example.tex
+++ b/example.tex
@@ -21,7 +21,7 @@
 \usepackage{caption}
 \usepackage{verbatim}
 \usepackage{atbegshi}
-\usepacakge{pdfpages}
+\usepackage{pdfpages}
 %---------------Add line numbers--------------%
 %\linenumbers
 %---------------Add line numbers--------------%
@@ -163,7 +163,8 @@ Syracuse, New York\\
 
 %% Produce the appendices
 \begin{appendices}
-  \input{appendices}
+%  \input{appendices}
+\input{cv}
 \end{appendices}
 
 %% Close
