--- a/cnn_results.tex
+++ b/cnn_results.tex
@@ -901,16 +901,16 @@ The BNB $\nu_{\mu}$ flux is plotted in figure \ref{fig:xsecflux}. The flux was t
 The calculated cross-sections are then:
 
 \begin{equation}
-\sigma_{\text{selI}} = \frac{3213-1328}{.123*3.917E^{31}*3.555E^{10}} = 1.1E^{-38}\\
-\sigma_{\text{selII}} = \frac{3228-528}{.287*3.917E^{31}*3.555E^{10}} = 0.68E^{-38}\\
-\sigma_{\text{CNN100000}} = \frac{7606-1401}{.30*3.917E^{31}*3.555E^{10}} = 1.48E^{-38}\\
-\sigma_{\text{CNN100000 modified}} = \frac{2569-296}{.139*3.917E^{31}*3.555E^{10}} = 1.17E^{-38}\\
+\sigma_{\text{selI}} = \frac{3213-1328}{.123*3.917E^{31}*3.555E^{10}} = 1.1 \pm 0.039 (stat) * 10^{-38} \\
+\sigma_{\text{selII}} = \frac{3228-528}{.287*3.917E^{31}*3.555E^{10}} = 0.68 \pm 0.0153 (stat) * 10^{-38}\\
+\sigma_{\text{CNN100000}} = \frac{7606-1401}{.30*3.917E^{31}*3.555E^{10}} = 1.48 \pm 0.023 (stat) * 10^{-38}\\
+\sigma_{\text{CNN100000 modified}} = \frac{2569-296}{.139*3.917E^{31}*3.555E^{10}} = 1.17 \pm 0.028 (stat) * 10^{-38}\\
 \end{equation}
-These selection cross-sections are plotted in figure \ref{fig:xsec} with the rest of the cross-section world data. Statistical and systematic errors still need to be calculated, but these datapoints are the starting point and give an idea of each of the selection's potential cross-section compared to the world data.
+These selection cross-sections are plotted in figure \ref{fig:xsec} with the rest of the cross-section world data. Only statistical error is shown, and $X_{err}$ is the spread of the mean neutrino energy from the BNB $\nu_{\mu}$ flux plot shown in figure \ref{fig:xsecflux}. Systematic errors still need to be calculated, but these datapoints are the starting point and give an idea of each of the selection's potential cross-section compared to the world data.
 
 \begin{figure}[htp!]
 \centering
-\includegraphics[angle=90,width=.8\textwidth]{figs/c_data_PDB_02_contained.png}
+\includegraphics[angle=90,width=0.8\textwidth]{figs/c_data_PDB_02.png}
 \caption{World data of neutrino cross-section measurements with MicroBooNE Selection I (pink), Selection II (cyan), uB CNN selection is CNN100000 (blue), and CNN selection contained is modified CNN100000 (green) datapoints.}
 \label{fig:xsec}
 \end{figure}
